--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>EduFina - Canada's Financial Literacy Course</title>
+    <title>EduFina - Financial Literacy Education</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,900;1,400;1,900&display=swap"
       rel="stylesheet"
